fixed alignment

--- a/1_start_page/styles.css
+++ b/1_start_page/styles.css
@@ -93,6 +93,7 @@ h1 {
     text-align: center;
     gap: 2rem;
     margin-top: 2rem;
+    margin-left: 2.5rem;
 }
 
 .card {
